macros/tests/ui/missing_param_description.stderr
error: Parameter 'param2' is missing description in docstring. Add: 'param2: description'
 --> tests/ui/missing_param_description.rs:7:1
  |
7 | fn function_with_missing_desc(param1: String, param2: i32) -> String {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
